Remove PPosition flag from shell widgets. Separate resource bindings. Increase limits some.

--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -127,8 +127,8 @@ Aspect ratio of preview tiles in browser window. Default is 4:3.
 Default size of preview tiles in browser window. Must be either \fIsmall\fP,
 \fImedium\fP, or \fIlarge\fP.
 .TP
-\fBtileSizePresets\fP \fIInteger, Integer, Integer\fP
-Comma separated list of three (small, medium, large) tile size presets in
+\fBtileSizeList\fP \fIInteger, Integer, Integer\fP
+Comma separated list of three (small, medium, large) tile size values in
 pixels. The final size is calculated using the aspect ratio specified with
 the \fBtileAspectRatio\fP resource.
 .TP
