Added large cursors

--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -102,6 +102,9 @@ command string specified.
 \fBkeyPanAmount\fP \fIInteger\fP
 Amount of pixels by which the image in the Viewer is moved per key press.
 .TP
+\fBlargeCursors\fP \fIBoolean\fP
+Use large cursors. Default is \fIFalse\fP.
+.TP
 \fBlargeToolbarIcons\fP \fIBoolean\fP
 Use large icons in toolbar buttons. Default is \fIFalse\fP.
 See also: \fBviewerToolbar\fP resource.
