--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -49,7 +49,7 @@ either keyboard or mouse. MB1 click selects an item. The selection may be
 extended to another item by holding the Shift key, while clicking another item
 using MB1. Selection state of a single item may be toggled by clicking on it
 using MB1, while holding down the Control key. MB2 behaves the same way as MB1,
-except that it displays a popup menu with commonly used functions. Double\-
+except that it displays a pop-up menu with commonly used functions. Double\-
 clicking an image with MB1 opens the file in the Viewer. Double\-clicking the
 file name with MB1 posts the Rename dialog. Double\-clicking an image, or
 pressing enter when the view area is focused, will display the selected file
@@ -70,7 +70,7 @@ The image, if larger than the view, may be panned either by holding MB1 pressed
 and dragging the image, or by pushing one of the direction keys on the keyboard.
 .TP
 \fBWindow Management\fP
-By default the last active browser or viewer window is reused when IXImaging
+By default the last active browser or viewer window is reused when XImaging
 receives a file/directory open request, but every window can be configured
 to stay within its current state by choosing \fBPin Window\fP from its
 \fBView\fP menu. The initial value for this setting may also be specified as
