Add directory browser pane

--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -125,6 +125,13 @@ Don't write anything to stdout. Default is False.
 Time interval in seconds at which XImaging checks for file
 and directory content changes. Default is 4 seconds.
 .TP
+\fBshowDirectories\fB \fIBoolean\fP
+Display sub\-directories in a separate pane in the browser window.
+Default is True.
+.TP
+\fBshowDotFiles\fP \fIBooleab\fP
+Display files whose names are starting with a dot. Default is True.
+.TP
 \fBtileAspectRatio\fP \fIInteger:Integer\fP
 Aspect ratio of preview tiles in browser window. Default is 4:3.
 .TP
