Primary selection request handling

--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -129,7 +129,7 @@ and directory content changes. Default is 4 seconds.
 Display sub\-directories in a separate pane in the browser window.
 Default is True.
 .TP
-\fBshowDotFiles\fP \fIBooleab\fP
+\fBshowDotFiles\fP \fIBoolean\fP
 Display files whose names are starting with a dot. Default is True.
 .TP
 \fBtileAspectRatio\fP \fIInteger:Integer\fP
