Update app-defaults and the manual

--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -1,4 +1,4 @@
-.\" Copyright (C) 2012-2017 alx@fastestcode.org
+.\" Copyright (C) 2012-2021 alx@fastestcode.org
 .\" This software is distributed under the terms of the MIT license.
 .\" See the included LICENSE file for further information.
 .\"
@@ -72,8 +72,8 @@ and dragging the image, or by pushing one of the direction keys on the keyboard.
 \fBWindow Management\fP
 By default the last active browser or viewer window is reused when XImaging
 receives a file/directory open request, but every window can be configured
-to stay within its current state by choosing \fBPin Window\fP from its
-\fBView\fP menu. The initial value for this setting may also be specified as
+to stay within its current state by choosing \fBPin This\fP from its
+\fBWindow\fP menu. The initial value for this setting may also be specified as
 X resource (see \fBRESOURCES\fP) or using the \fB\-pin\fP command line switch.
 .SH RESOURCES
 .TP
