--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -1,4 +1,4 @@
-.\" Copyright (C) 2012-2021 alx@fastestcode.org
+.\" Copyright (C) 2012-2024 alx@fastestcode.org
 .\" This software is distributed under the terms of the MIT license.
 .\" See the included LICENSE file for further information.
 .\"
@@ -19,6 +19,13 @@ command line:
 \fB\-browse\fP
 Open a browser rather than a viewer window when the application is launched
 without a file/directory argument.
+.TP
+\fB\-format\fP <suffix>
+Deduce image file format from the suffix specified
+(see \fBSUPPORTED FILE FORMATS\fP).
+.TP
+\fB-f\fP <suffix>
+Same as \fB\-format\fP.
 .TP
 \fB\-pin\fP
 Pin newly opened window so it won't be reused.
