--- a/src/ximaging.1
+++ b/src/ximaging.1
@@ -22,7 +22,7 @@ without a file/directory argument.
 .TP
 \fB\-format\fP <suffix>
 Deduce image file format from the suffix specified
-(see \fBSUPPORTED FILE FORMATS\fP).
+(see \fBSUPPORTED FILE FORMATS\fP and \fBFILTERS\fP).
 .TP
 \fB-f\fP <suffix>
 Same as \fB\-format\fP.
@@ -84,6 +84,10 @@ to stay within its current state by choosing \fBPin This\fP from its
 X resource (see \fBRESOURCES\fP) or using the \fB\-pin\fP command line switch.
 .SH RESOURCES
 .TP
+\fBadvanceOnDelete\fP \fIBoolean\fP
+If True, the viewer will load next file in the directory, when currently
+displayed file is being deleted. Default is True.
+.TP
 \fBbrowse\fP \fIBoolean\fP
 Open a browser window rather than a viewer window when the application is
 launched without a file/directory argument. Default is False.
@@ -96,6 +100,7 @@ Apply filtering when down\-sampling (zooming out) images in the viewer window.
 Results in better image quality if enabled, but is computationally intensive,
 especially on large images. The default value is True.
 \fBNOTE:\fP This option is only supported on true color visuals.
+See also \fBfastPanning\fP.
 .TP
 \fBeditCommand\fP \fIString\fP
 A command to be invoked when the \fBEdit\fP item is chosen from the \fBFile\fP
@@ -175,7 +180,8 @@ Specifies the increment value for the zoom-in/out function. Must be in the
 .PP
 .nf
 JPEG Image (jpg, jpeg, jpe, jif, jfif, jfi)
-MS-Windows Bitmap (bmp) - BMP V3+, uncompressed only
+MS-Windows Bitmap - BMP V3+, uncompressed only (bmp)
+Netpbm - Portable Any Map, Type 4 to 7 (pbm, pgm, ppm, pam)
 PC-Paintbrush V5 (pcx)
 Portable Network Graphics (png)
 Silicon Graphics Image (sgi, rgb, rgba, int, inta, bw)
@@ -185,10 +191,51 @@ Truevision (tga, tpic)
 X/CDE Bitmap (xbm, bm)
 X/CDE Pixmap (xpm, pm) - XMP3 only
 .fi
+.PP
+Support for additional image types is available through filters.
+.SH FILTERS
+.PP
+A filter is an executable program that can read a particular image format and
+write its contents to the stdout in PNM (Netpbm) format, which XImaging will
+then read and display.
+.PP
+To use a filter, XImaging needs to know the executable's file name, and what
+image name suffixes it should be invoked for. This is defined by two mandatory
+and one optional Xresource records.
+.PP
+.nf
+XImaging.filter.<\fBfilter_name\fP>: <\fBexecutable_file_name\fP>
+XImaging.filter.<\fBfilter_name\fP>.suffixes: <\fBlist_of_suffixes\fP>
+XImaging.filter.<\fBfilter_name\fP>.description: <\fBtype_description\fP>
+.fi
+.PP
+\fBfilter_name\fP may be any string adhering to X resource specification.
+.PP
+\fBexecutable_file_name\fP specifies the file name of the filter executable
+and its arguments, in which the placeholder \fB%n\fP is expanded to the
+image file name.
+.PP
+\fBlist_of_suffixes\fP should contain one or more, space separated, file name
+suffixes (without the dot character) this filter should be invoked for.
+.PP
+\fBtype_description\fP is optional and specifies the descriptive text to be
+displayed in viewer's status area, which defaults to PNM data type if omitted.
+.PP
+\fBFilter examples using \fIconvert\fP (ImageMagick) and \fIxcf2pmn\fP
+(xcftools):\fP
+.PP
+.nf
+XImaging.filter.imagemagick: convert %n pam:-
+XImaging.filter.imagemagick.suffixes: svg gif psd
+
+XImaging.filter.gimp: xcf2pnm -c -b #ffffff %n
+XImaging.filter.gimp.suffixes: xcf
+XImaging.filter.gimp.description: GIMP Image
+.fi
 .SH AUTHORS
 .PP
 XImaging was written and is maintained by alx@fastestcode.org
 .SH CAVEATS
 .PP
-XImaging doesn't provide file format conversion features. There are tools -
-e.g., ImageMagick (http://www.imagemagick.org) designed for this purpose.
+XImaging doesn't provide file format conversion features. There are tools \-
+e.g., ImageMagick (http://www.imagemagick.org) \- designed for this purpose.
